reestructuracion modelo empleados, img controller

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
 MONGO_CNN=mongodb+srv://admin:adminf@pos.sdk0h.mongodb.net/pos
+MONGO=mongodb+srv://admin:adminf@posdb.oujso.mongodb.net/posdb
