--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
+    "nodejs-unique-numeric-id-generator": "^1.0.1",
     "nodemon": "^2.0.7"
   }
 }
